Kubernetes/Privatebin/yamls/privatebin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: privatebin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: privatebin
  name: privatebin-deployment
  namespace: privatebin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: privatebin
  template:
    metadata:
      labels:
        app: privatebin
    spec:
      securityContext:
        runAsUser: 65534
        runAsGroup: 82
        fsGroup: 82
#      terminationGracePeriodSeconds: 40
      containers:
        - name: privatebin
          image: privatebin/nginx-fpm-alpine:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          volumeMounts:
            - name: privatebin-data
              mountPath: /srv/data
              readOnly: false
            - name: privatebin-config
              mountPath: /srv/cfg
              readOnly: false
      volumes:
        - name: privatebin-data
          persistentVolumeClaim:
            claimName: privatebin-data
        - name: privatebin-config
          persistentVolumeClaim:
            claimName: privatebin-config
---
apiVersion: v1
kind: Service
metadata:
  name: privatebin-service
  namespace: privatebin
spec:
  ports:
    - name: web
      port: 8080
      targetPort: 8080
  selector:
    app: privatebin
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-privatebin-https-redirect
  namespace: privatebin
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-privatebin-security
  namespace: privatebin
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
    customFrameOptionsValue: sameorigin
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-privatebin-websecure
  namespace: privatebin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`privatebin.domain.com`)
      kind: Rule
      services:
        - name: privatebin-service
          port: 8080
          serversTransport: traefik-privatebin-transport
      middlewares:
        - name: traefik-privatebin-security
  tls:
    secretName: privatebin-domain-com
    options:
      name: traefik-privatebin-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-privatebin-web
  namespace: privatebin
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`privatebin.domain.com`)
      kind: Rule
      services:
        - name: privatebin-service
          port: 8080
      middlewares:
        - name: traefik-privatebin-https-redirect
